[workspace]
resolver = "2"
members = [
    "sniper"
]

[workspace.package]
name = "Solana-Sniper"
authors = ["Alexander Høgh"]
edition = "2021"
homepage = ""
repository = "https://github.com/weestack/Solana-Sniper"
license = "MIT"
keywords = ["solana", "sniper", "wsol"]
version = "0.1.0"
readme = "README.md"
categories = ["science", "algorithms"]
publish = false

[workspace.dependencies]
utils = { path = "utils" }
dotenv = "0.15.0"
thiserror = "2.0.9"
solana-client = "2.1.7"
solana-program = "2.1.7"
solana-sdk = "2.1.7"
tokio = "1.42.0"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1
