[workspace]
resolver = "2"
members = [
    "shell",
    "sniper"
]

[workspace.package]
name = "Solana-Sniper"
authors = ["Alexander Høgh"]
edition = "2021"
homepage = ""
repository = "https://github.com/weestack/Solana-Sniper"
license = "MIT"
keywords = ["solana", "sniper", "wsol"]
version = "0.1.0"
readme = "README.md"
categories = ["science", "algorithms"]
publish = false

[workspace.dependencies]
utils = { path = "utils" }
dotenv = "0.15.0"
thiserror = "2.0.18"
solana-client = "4.0.0-alpha.0"
solana-program = "4.0.0"
solana-sdk = "4.0.1"
solana-transaction = "4.0.0"
solana-transaction-status = "4.0.0-alpha.0"
solana-system-interface = "3.1.0"
spl-associated-token-account = "8.0.0"
tokio = { version = "1.49.0"}
futures = "0.3.32"
env_logger = "0.11.9"
log = "0.4.29"
clap = { version = "4.5.60", features = ["derive"] }
spl-token = "9.0.0"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1
