[package]
name = "shell"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
version.workspace = true
readme.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
utils = { workspace = true }

[lints]
workspace = true
