[package]
name = "shell"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
version.workspace = true
readme.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
clap = { workspace = true }
utils = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction = { workspace = true }
solana-system-interface = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
