[package]
name = "sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true}
solana-transaction-status = { workspace = true}
tokio = { workspace = true }
futures = { workspace = true }
log = { workspace = true }