[package]
name = "utils"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
version.workspace = true
readme.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
dotenv = { workspace = true }
thiserror = { workspace = true }
solana-program = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
